# prellm-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: prellm_cost_benchmark.md
src/prellm_gate/: __init__.py  core.py  eval.py
src/prellm_gate/data/: coding_cases.json  swebench_cases.json  toy_cases.json
tests/: test_cost_benchmark.py  test_gate.py
tools/: prellm_cost_benchmark.py  swebench_routing_smoke.py
