[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prellm-gate"
version = "0.1.0"
description = "Cheap pre-inference gating for trivial agent calls"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bo" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prellm_gate = ["data/*.json"]

[project.scripts]
prellm-gate-eval = "prellm_gate.eval:main"
